@@ -2,3 +2,4 @@
 /src/gen
 /test
 /build
+/chunky.map
